--- a/README
+++ b/README
@@ -1,9 +1,3 @@
-Project is all about how to use kundera for:
-1) Performing CRUD operation.
-2) Association Handling.
-3) Cross data store persistence.
+**Note:** All code examples have been moved to [Kundera](https://github.com/impetus-opensource/Kundera) project.
 
-References:
-Please refer to our wiki site for brief description and blog written about them.
-
-https://github.com/impetus-opensource/Kundera/wiki/Sample-Codes-and-Examples
+Please visit https://github.com/impetus-opensource/Kundera/wiki/Sample-Codes-and-Examples for sample codes and examples.
