--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-**Note:** All code examples have been moved to [Kundera](https://github.com/impetus-opensource/Kundera) project.
+Note: All code examples have been moved to Kundera (https://github.com/impetus-opensource/Kundera) project.
 
 Please visit https://github.com/impetus-opensource/Kundera/wiki/Sample-Codes-and-Examples for sample codes and examples.
